# mkquartodocs

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  404.html  CI_DOCKER_GUIDE.md  CONTRIBUTING.md  Dockerfile  README.md  README.qmd  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: CICD-docker.yml  CICD.yml  lint.yml
docs/: README.md  README.qmd  example.qmd
docs/examples/: example.md  example.qmd  matplotlib_example.qmd  mermaid_example.qmd  mkdocstrings_example.qmd
examples/: dataframe_example.qmd  example.qmd  matplotlib_example.qmd  mermaid_example.qmd
examples/dataframe_example/: index.html
examples/example/: index.html
examples/matplotlib_example/: index.html
examples/mermaid_example/: index.html
examples/mkdocstrings_example/: index.html
mkquartodocs/: context.py  extension.py  logging.py  plugin.py  utils.py
search/: search_index.json
tests/: Dockerfile.test  docker_run.bash  test_main.py  test_nothing.py  test_preprocessor.py  test_utils.py
tests/__snapshots__/: test_main.ambr  test_preprocessor.ambr
tests/data/: build_all.bash
tests/data/docs_assets/: expected_output.txt  test_config.yml
tests/data/docs_assets/docs/: page.md  page.qmd
tests/data/docs_clean/: expected_missing.txt  expected_output.txt  test_config.yml
tests/data/docs_clean/docs/: page.qmd
tests/data/docs_dirty/: expected_output.txt  mkdocs.yml  test_config.yml
tests/data/docs_ignore/: expected_missing.txt  expected_output.txt  mkdocs.yml  test_config.yml
tests/data/docs_ignore/docs/: index.md  my_ugly_page.qmd
tests/data/docs_issue69/: expected_missing.txt  expected_output.txt  mkdocs.yml  test_config.yml
tests/data/docs_issue69/docs/: example.qmd  index.md  mkdocstrings_test.qmd
tests/data/docs_no_qmd/: expected_output.txt  test_config.yml
tests/data/docs_python/: test_config.yml
tests/data/docs_python/docs/: page.qmd
tests/data/qmd_inputs/: simple.gfm.md  simple.hugo.md  simple.markdown.md  simple.qmd
tests/data/qmd_outputs/: simple.to.markdown.md
tests/docs_assets/docs/: index.md  page.md  page.qmd
tests/docs_clean/docs/: page.qmd
tests/preprocessor_snapshots/cell_with_stderr/: README.md  input.md
tests/preprocessor_snapshots/cell_with_stdout/: README.md  input.md
tests/preprocessor_snapshots/mkdocstrings_syntax/: README.md  input.md
tests/preprocessor_snapshots/multiple_outputs/: README.md  input.md
tests/preprocessor_snapshots/nested_cells/: README.md  input.md
tests/test_preprocessor/: build.bash  labelled_cell.md  labelled_cell.md.md.postprocessed  labelled_cell.qmd  matplotlib.qmd  mermaid.qmd  mermaid_python.qmd  pandas.qmd  r_df.qmd  r_plot.qmd
