[project]
name = "mkquartodocs"
version = "0.5.12"
description = ""
authors = [
    {name = "J. Sebastian Paez", email = "jspaezp@users.noreply.github.com"},
]
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.9,<3.14"
dependencies = [
    "mkdocs>=1.6.0",
]

[project.entry-points."mkdocs.plugins"]
"mkquartodocs" = "mkquartodocs.plugin:MkQuartoDocsPlugin"

[dependecy-groups]
lint = [
    "black>=22.8.0",
    "pylint>=2.16.2",
    "ruff>=0.5.5",
]
check = [
    "jupyter>=1.0.0",
    "pydocstringformatter>=0.7.2",
    "pyupgrade>=2.37.3",
    "pytest-datadir>=1.3.1",
    "pytest>=8.3.1",
    "pytest-cov>=4.0.0",
    "mdformat>=0.7.16",
    "mdformat-black>=0.1.1",
    "mdformat-config>=0.1.3",
    "mdformat-beautysh>=0.1.1",
    "mdformat_frontmatter>=2.0.8",
    "build",
]
docs = [
    "mkdocs-material>=9.5.33",
    "mkdocs-autorefs>=1.1.0",
    "mkdocstrings[python]>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py38"]
line-length = 88

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"
add-ignore = "D102,D101,D100,D105,D107,D104"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=mkquartodocs"
doctest_plus = "enabled"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
testpaths = ["tests", "mkquartodocs"]


[tool.pydocstringformatter]
style = "numpydoc"
max-line-length = 88

[tool.pylint]
load-plugins = 'pylint.extensions.docparams'

[tool.pylint.format]
max-line-length = 88
