[project]
name = "mkquartodocs"
version = "0.7.0"
description = ""
authors = [
  { name = "J. Sebastian Paez", email = "jspaezp@users.noreply.github.com" },
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
  "mkdocs>=1.6.1",
  "pymdown-extensions",
]

[project.entry-points."mkdocs.plugins"]
"mkquartodocs" = "mkquartodocs.plugin:MkQuartoDocsPlugin"

[dependency-groups]
lint = ["black>=24.10.0", "pylint>=2.16.2", "ruff>=0.8.4"]
check = [
  "jupyter>=1.0.0",
  "pytest-datadir>=1.3.1",
  "pytest>=8.3.1",
  "pytest-cov>=4.0.0",
  "syrupy>=4.0.0",
  "pyyaml>=6.0.0",
  "mdformat>=0.7.16",
  "mdformat-black>=0.1.1",
  "mdformat-config>=0.1.3",
  "mdformat-beautysh>=0.1.1",
  "mdformat_frontmatter>=2.0.8",
  "build",
]
check_mkdocstrings = [
  "mkdocstrings[python]>=0.25.2",
]
docs = [
  "mkdocs-material>=9.5.49",
  "mkdocs-autorefs>=1.1.0",
  "mkdocstrings[python]>=0.25.2",
  "pandas",
  "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"
add-ignore = "D102,D101,D100,D105,D107,D104"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=mkquartodocs"
doctest_plus = "enabled"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
testpaths = ["tests", "mkquartodocs"]


[tool.pydocstringformatter]
style = "numpydoc"
max-line-length = 88

[tool.pylint]
load-plugins = 'pylint.extensions.docparams'

[tool.pylint.format]
max-line-length = 88
